raspberry/base/hasty-challenge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - job-api.tuyenpc.online
    secretName: job-api-tls
  rules:
  - host: job-api.tuyenpc.online
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: job-api
              port:
                number: 3000
